ProcesseurXML/xml.output
Grammaire

    0 $accept: main $end

    1 main: document

    2 document: prolog element miscs

    3 element: INF NOM attributes SUP content INF SLASH NOM SUP
    4        | INF NOM attributes SLASH SUP

    5 content: content element
    6        | content cdsect
    7        | content misc
    8        | content DONNEES
    9        | /* vide */

   10 attributes: attributes attribute
   11           | /* vide */

   12 attribute: NOM EGAL VALEUR
   13          | NOM COLON NOM EGAL VALEUR

   14 doctypedecl: DOCTYPE NOM NOM SUP
   15            | DOCTYPE NOM SUP

   16 prolog: xmldecl miscs doctypedecl miscs
   17       | xmldecl miscs

   18 xmldecl: INFSPECIAL NOM attributes SUPSPECIAL

   19 miscs: miscs misc
   20      | /* vide */

   21 misc: COMMENT
   22     | pi

   23 pi: INFSPECIAL NOM attributes SUPSPECIAL

   24 cdsect: CDATABEGIN CDATAEND


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EGAL (258) 12 13
SLASH (259) 3 4
SUP (260) 3 4 14 15
SUPSPECIAL (261) 18 23
DOCTYPE (262) 14 15
COLON (263) 13
INFSPECIAL (264) 18 23
INF (265) 3 4
CDATABEGIN (266) 24
VALEUR (267) 12 13
DONNEES (268) 8
COMMENT (269) 21
NOM (270) 3 4 12 13 14 15 18 23
CDATAEND (271) 24


Non-terminaux, suivis des règles où ils apparaissent

$accept (17)
    à gauche: 0
main (18)
    à gauche: 1, à droite: 0
document (19)
    à gauche: 2, à droite: 1
element (20)
    à gauche: 3 4, à droite: 2 5
content (21)
    à gauche: 5 6 7 8 9, à droite: 3 5 6 7 8
attributes (22)
    à gauche: 10 11, à droite: 3 4 10 18 23
attribute (23)
    à gauche: 12 13, à droite: 10
doctypedecl (24)
    à gauche: 14 15, à droite: 16
prolog (25)
    à gauche: 16 17, à droite: 2
xmldecl (26)
    à gauche: 18, à droite: 16 17
miscs (27)
    à gauche: 19 20, à droite: 2 16 17 19
misc (28)
    à gauche: 21 22, à droite: 7 19
pi (29)
    à gauche: 23, à droite: 22
cdsect (30)
    à gauche: 24, à droite: 6


état 0

    0 $accept: . main $end

    INFSPECIAL  décalage et aller à l'état 1

    main      aller à l'état 2
    document  aller à l'état 3
    prolog    aller à l'état 4
    xmldecl   aller à l'état 5


état 1

   18 xmldecl: INFSPECIAL . NOM attributes SUPSPECIAL

    NOM  décalage et aller à l'état 6


état 2

    0 $accept: main . $end

    $end  décalage et aller à l'état 7


état 3

    1 main: document .

    $défaut  réduction par utilisation de la règle 1 (main)


état 4

    2 document: prolog . element miscs

    INF  décalage et aller à l'état 8

    element  aller à l'état 9


état 5

   16 prolog: xmldecl . miscs doctypedecl miscs
   17       | xmldecl . miscs

    $défaut  réduction par utilisation de la règle 20 (miscs)

    miscs  aller à l'état 10


état 6

   18 xmldecl: INFSPECIAL NOM . attributes SUPSPECIAL

    $défaut  réduction par utilisation de la règle 11 (attributes)

    attributes  aller à l'état 11


état 7

    0 $accept: main $end .

    $défaut  accepter


état 8

    3 element: INF . NOM attributes SUP content INF SLASH NOM SUP
    4        | INF . NOM attributes SLASH SUP

    NOM  décalage et aller à l'état 12


état 9

    2 document: prolog element . miscs

    $défaut  réduction par utilisation de la règle 20 (miscs)

    miscs  aller à l'état 13


état 10

   16 prolog: xmldecl miscs . doctypedecl miscs
   17       | xmldecl miscs .
   19 miscs: miscs . misc

    DOCTYPE     décalage et aller à l'état 14
    INFSPECIAL  décalage et aller à l'état 15
    COMMENT     décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 17 (prolog)

    doctypedecl  aller à l'état 17
    misc         aller à l'état 18
    pi           aller à l'état 19


état 11

   10 attributes: attributes . attribute
   18 xmldecl: INFSPECIAL NOM attributes . SUPSPECIAL

    SUPSPECIAL  décalage et aller à l'état 20
    NOM         décalage et aller à l'état 21

    attribute  aller à l'état 22


état 12

    3 element: INF NOM . attributes SUP content INF SLASH NOM SUP
    4        | INF NOM . attributes SLASH SUP

    $défaut  réduction par utilisation de la règle 11 (attributes)

    attributes  aller à l'état 23


état 13

    2 document: prolog element miscs .
   19 miscs: miscs . misc

    INFSPECIAL  décalage et aller à l'état 15
    COMMENT     décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 2 (document)

    misc  aller à l'état 18
    pi    aller à l'état 19


état 14

   14 doctypedecl: DOCTYPE . NOM NOM SUP
   15            | DOCTYPE . NOM SUP

    NOM  décalage et aller à l'état 24


état 15

   23 pi: INFSPECIAL . NOM attributes SUPSPECIAL

    NOM  décalage et aller à l'état 25


état 16

   21 misc: COMMENT .

    $défaut  réduction par utilisation de la règle 21 (misc)


état 17

   16 prolog: xmldecl miscs doctypedecl . miscs

    $défaut  réduction par utilisation de la règle 20 (miscs)

    miscs  aller à l'état 26


état 18

   19 miscs: miscs misc .

    $défaut  réduction par utilisation de la règle 19 (miscs)


état 19

   22 misc: pi .

    $défaut  réduction par utilisation de la règle 22 (misc)


état 20

   18 xmldecl: INFSPECIAL NOM attributes SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 18 (xmldecl)


état 21

   12 attribute: NOM . EGAL VALEUR
   13          | NOM . COLON NOM EGAL VALEUR

    EGAL   décalage et aller à l'état 27
    COLON  décalage et aller à l'état 28


état 22

   10 attributes: attributes attribute .

    $défaut  réduction par utilisation de la règle 10 (attributes)


état 23

    3 element: INF NOM attributes . SUP content INF SLASH NOM SUP
    4        | INF NOM attributes . SLASH SUP
   10 attributes: attributes . attribute

    SLASH  décalage et aller à l'état 29
    SUP    décalage et aller à l'état 30
    NOM    décalage et aller à l'état 21

    attribute  aller à l'état 22


état 24

   14 doctypedecl: DOCTYPE NOM . NOM SUP
   15            | DOCTYPE NOM . SUP

    SUP  décalage et aller à l'état 31
    NOM  décalage et aller à l'état 32


état 25

   23 pi: INFSPECIAL NOM . attributes SUPSPECIAL

    $défaut  réduction par utilisation de la règle 11 (attributes)

    attributes  aller à l'état 33


état 26

   16 prolog: xmldecl miscs doctypedecl miscs .
   19 miscs: miscs . misc

    INFSPECIAL  décalage et aller à l'état 15
    COMMENT     décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 16 (prolog)

    misc  aller à l'état 18
    pi    aller à l'état 19


état 27

   12 attribute: NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 34


état 28

   13 attribute: NOM COLON . NOM EGAL VALEUR

    NOM  décalage et aller à l'état 35


état 29

    4 element: INF NOM attributes SLASH . SUP

    SUP  décalage et aller à l'état 36


état 30

    3 element: INF NOM attributes SUP . content INF SLASH NOM SUP

    $défaut  réduction par utilisation de la règle 9 (content)

    content  aller à l'état 37


état 31

   15 doctypedecl: DOCTYPE NOM SUP .

    $défaut  réduction par utilisation de la règle 15 (doctypedecl)


état 32

   14 doctypedecl: DOCTYPE NOM NOM . SUP

    SUP  décalage et aller à l'état 38


état 33

   10 attributes: attributes . attribute
   23 pi: INFSPECIAL NOM attributes . SUPSPECIAL

    SUPSPECIAL  décalage et aller à l'état 39
    NOM         décalage et aller à l'état 21

    attribute  aller à l'état 22


état 34

   12 attribute: NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 12 (attribute)


état 35

   13 attribute: NOM COLON NOM . EGAL VALEUR

    EGAL  décalage et aller à l'état 40


état 36

    4 element: INF NOM attributes SLASH SUP .

    $défaut  réduction par utilisation de la règle 4 (element)


état 37

    3 element: INF NOM attributes SUP content . INF SLASH NOM SUP
    5 content: content . element
    6        | content . cdsect
    7        | content . misc
    8        | content . DONNEES

    INFSPECIAL  décalage et aller à l'état 15
    INF         décalage et aller à l'état 41
    CDATABEGIN  décalage et aller à l'état 42
    DONNEES     décalage et aller à l'état 43
    COMMENT     décalage et aller à l'état 16

    element  aller à l'état 44
    misc     aller à l'état 45
    pi       aller à l'état 19
    cdsect   aller à l'état 46


état 38

   14 doctypedecl: DOCTYPE NOM NOM SUP .

    $défaut  réduction par utilisation de la règle 14 (doctypedecl)


état 39

   23 pi: INFSPECIAL NOM attributes SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 23 (pi)


état 40

   13 attribute: NOM COLON NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 47


état 41

    3 element: INF . NOM attributes SUP content INF SLASH NOM SUP
    3        | INF NOM attributes SUP content INF . SLASH NOM SUP
    4        | INF . NOM attributes SLASH SUP

    SLASH  décalage et aller à l'état 48
    NOM    décalage et aller à l'état 12


état 42

   24 cdsect: CDATABEGIN . CDATAEND

    CDATAEND  décalage et aller à l'état 49


état 43

    8 content: content DONNEES .

    $défaut  réduction par utilisation de la règle 8 (content)


état 44

    5 content: content element .

    $défaut  réduction par utilisation de la règle 5 (content)


état 45

    7 content: content misc .

    $défaut  réduction par utilisation de la règle 7 (content)


état 46

    6 content: content cdsect .

    $défaut  réduction par utilisation de la règle 6 (content)


état 47

   13 attribute: NOM COLON NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 13 (attribute)


état 48

    3 element: INF NOM attributes SUP content INF SLASH . NOM SUP

    NOM  décalage et aller à l'état 50


état 49

   24 cdsect: CDATABEGIN CDATAEND .

    $défaut  réduction par utilisation de la règle 24 (cdsect)


état 50

    3 element: INF NOM attributes SUP content INF SLASH NOM . SUP

    SUP  décalage et aller à l'état 51


état 51

    3 element: INF NOM attributes SUP content INF SLASH NOM SUP .

    $défaut  réduction par utilisation de la règle 3 (element)
